<resources>
    <string name="app_name">Calculot</string>
    <string name="calculot_title">CALCULOT</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="first_name_hint">First Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="add_user">Add User</string>
    <string name="select_a_user">Select a User</string>
    <string name="practice_xp">Practice XP:</string>
    <string name="learning_xp">Learning XP:</string>
    <string name="title_activity_game_win">GameWinActivity</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="WinMessage">You have successfully defended against the forces of evil and have earned:</string>
    <string name="learn">Learn</string>
    <string name="game">Game</string>
    <string name="profile">Profile</string>
    <string name="level">Level</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="game_wizardgame">Defense of Calculot: Defend against the forces of calculot by solving derivatives and/or integrals!</string>
    <string name="game_WizardBall">Wizard\'s Crystal Ball: Solve questions about vectors, trigonometry and complex numbers to power up the wizard\'s crystal ball!</string>
    <string name="gameDiff_Diff">Differentiation</string>
    <string name="gameDiff_Int">Integration</string>
    <string name="gameDiff_Comb">Combined</string>
    <string name="TryAgain">Try Again</string>
    <string name="game_goToMainMenu">Go Back to Main Menu</string>


    <string name="emptyQuestion">Click on the monster to start a quest! \n</string>
    <string name="ans1">Answer 1</string>
    <string name="ans2">Answer 2</string>
    <string name="ans3">Answer 3</string>
    <string name="ans4">Answer 4</string>
    <string name="achievements">Achievements</string>
</resources>