<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/addUser_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:inputType="textCapWords|textNoSuggestions"
        android:hint="@string/first_name_hint" />

    <EditText
        android:id="@+id/addUser_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/addUser_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <EditText
        android:id="@+id/addUser_retypepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <Button
        android:id="@+id/addUser_signUp_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:onClick="add_user_onClick_signUp"
        android:text="@string/sign_up_button" />
</LinearLayout>